# Rich-Tree

./: pyproject.toml  readme.md  requirements.txt
rich-tree/: __init__.py  __main__.py  builder.py  cli.py  display.py  tree_viewer.py
rich_tree/: __init__.py  cli.py  tree_viewer.py
scripts/: setup-rich-tree.ps1
tests/: decode_string.py
