[project]
name = "rich-tree"
version = "0.1.0"
description = ""
authors = [
    {name = "leekHotline",email = "117092932+leekHotline@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich (>=14.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
